@@ -5,8 +5,8 @@ plugins {
 group 'com.xspace.java11.feature'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 12
+targetCompatibility = 12
 
 [compileJava, compileTestJava, javadoc]*.options*.encoding = "UTF-8"
 
@@ -24,7 +24,15 @@ dependencies {
   compile(
           'org.slf4j:slf4j-api:1.7.26',
           'ch.qos.logback:logback-classic:1.2.3',
-          'com.google.guava:guava:28.0-jre'
+          'com.google.guava:guava:28.0-jre',
+          'org.openjdk.jmh:jmh-core: 1.21 ',
+          'org.openjdk.jmh:jmh-generator-annprocess:1.21',
+          'org.apache.maven.plugins:maven-compiler-plugin:3.8.1'
   )
+}
+
+apply plugin: 'java'
+tasks.withType(JavaCompile) {
+  options.compilerArgs.add("--enable-preview");
 }
 
